# PythonHEP-Book

./: .buildinfo  .gitignore  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/content/: 1_uprootawk.ipynb  2_awksim.ipynb  2_ttrees.ipynb  3_combinatronics.ipynb  4_dimuons.ipynb  intro.md  project-workbook.ipynb
content/: 0_dictsarrs.html  1_uprootawk.html  2_awksim.html  2_ttrees.html  3_combinatronics.html  4_dimuons.html  5_vecthist.html  intro.html  nb0_dictsarrs.html  nb1_uprootIO.html  nb2_ttrees.html  nb3_combinatronics.html  nb4_dimuons.html  nb5_vecthist.html  project-workbook.html
pythonhep/: _config.yml  _toc.yml
pythonhep/content/: 0_dictsarrs.ipynb  1_uprootawk.ipynb  2_awksim.ipynb  2_ttrees.ipynb  3_combinatronics.ipynb  4_dimuons.ipynb  5_vecthist.ipynb  intro.md  project-workbook.ipynb
