[project]
name = "pythonhep-book"
version = "0.1.0"
description = ""
authors = [
    {name = "Roy Cruz",email = "roy.cruz@upr.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "mystmd (>=1.3.28,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
