[project]
name = "pythonhep-book"
version = "0.1.0"
description = ""
authors = [
    {name = "Roy Cruz",email = "roy.cruz@upr.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "mystmd (>=1.3.28,<2.0.0)",
    "uproot (>=5.6.2,<6.0.0)",
    "scikit-hep-testdata (>=0.5.4,<0.6.0)",
    "hist (>=2.8.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "mplhep (>=0.3.59,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.12.2,<4.0.0)",
    "fsspec-xrootd (>=0.5.1,<0.6.0)",
    "xrootd (>=5.8.2,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "awkward-pandas (>=2023.8.0,<2024.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "particle (>=0.25.4,<0.26.0)",
    "vector (>=1.6.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
